# example-package-EDUARDO

./: README.md  main.yml  pyproject.toml  test2
.github/workflows/: main.yml
src/example_package_eduardo/: rescale.py
tests/: test_rescale.py
