# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project]
name = "example-package-eduardo"
version = "0.1.0"
description = "A Python package maintained by bioedca."
readme = "README.md"
dependencies = ["numpy"]
license = { file = "LICENSE" }
authors = [
    { name = "bioedca" },
]
homepage = "https://github.com/bioedca/example-package-EDUARDO"
documentation = "https://github.com/bioedca/example-package-EDUARDO#readme"
repository = "https://github.com/bioedca/example-package-EDUARDO"
keywords = ["example", "package", "eduardo"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example_package_eduardo"]

[project.optional-dependencies]
test = ["pytest"]
